--- a/Lab 4/app/src/main/res/layout/activity_main.xml
+++ b/Lab 4/app/src/main/res/layout/activity_main.xml
@@ -13,13 +13,13 @@
         android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/logoImage"
+            android:id="@+id/avatarImage"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_marginStart="150dp"
             android:layout_marginTop="50dp"
             android:onClick="OnSetAvatarButton"
-            android:src="@tools:sample/avatars"
+            android:src="@drawable/ic_logo_00"
             app:srcCompat="@drawable/ic_logo_00"
             tools:ignore="SpeakableTextPresentCheck" />
 
