--- a/Lab 4/app/src/main/res/layout/activity_profile.xml
+++ b/Lab 4/app/src/main/res/layout/activity_profile.xml
@@ -28,7 +28,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:onClick="SetTeamIcon"
-            android:src="@tools:sample/avatars"
+            android:src="@drawable/ic_logo_00"
             app:srcCompat="@drawable/ic_logo_00"
             tools:ignore="SpeakableTextPresentCheck" />
 
@@ -38,7 +38,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:onClick="SetTeamIcon"
-            android:src="@tools:sample/avatars"
+            android:src="@drawable/ic_logo_01"
             app:srcCompat="@drawable/ic_logo_01"
             tools:ignore="SpeakableTextPresentCheck" />
 
@@ -48,7 +48,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:onClick="SetTeamIcon"
-            android:src="@tools:sample/avatars"
+            android:src="@drawable/ic_logo_02"
             app:srcCompat="@drawable/ic_logo_02"
             tools:ignore="SpeakableTextPresentCheck" />
     </LinearLayout>
@@ -66,7 +66,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:onClick="SetTeamIcon"
-            android:src="@tools:sample/avatars"
+            android:src="@drawable/ic_logo_03"
             app:srcCompat="@drawable/ic_logo_03"
             tools:ignore="SpeakableTextPresentCheck" />
 
@@ -76,7 +76,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:onClick="SetTeamIcon"
-            android:src="@tools:sample/avatars"
+            android:src="@drawable/ic_logo_04"
             app:srcCompat="@drawable/ic_logo_04"
             tools:ignore="SpeakableTextPresentCheck" />
 
@@ -86,7 +86,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:onClick="SetTeamIcon"
-            android:src="@tools:sample/avatars"
+            android:src="@drawable/ic_logo_05"
             app:srcCompat="@drawable/ic_logo_05"
             tools:ignore="SpeakableTextPresentCheck" />
     </LinearLayout>
